2005-02-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	Fix build on Red Hat 7.2 Alpha. Fix from <diskman at kc rr com>
	Closes bug #165564.

===================== 2.9.1 ==================

2005-01-25  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-score.c: (gnome_score_child): Handle
	blank real name fields in the passwd file correctly.
	Patch from Callum McKenzie <callum at physics otago ac nz>
	Closes bug #149270.

2004-11-12  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-config.h:
	Deprecate, use GKeyFile instead.
	
	* libgnome/gnome-i18n.h:
	Deprecate, use glib/gi18n.h and	g_get_language_names instead.
	
	* libgnome/gnome-score.h:
	Deprecate. This is too specialized, and eventually a replacement
	will find its way into gnome-games.
	
2004-11-08  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Update to 2.9.1

2004-10-27  Thomas Fitzsimmons	<fitzsim@redhat.com>			       
									       
					     
	* schemas/Makefile.am (install-data-local): Install generated	       
	.schema files from build directory, not source directory.

2004-10-10  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-gconf.c:
	(gnome_gconf_get_gnome_libs_settings_relative):
	Escape the app id.
	
==================== 2.8.0 ====================

2004-09-12  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.8.0

	* NEWS: Update

=================== 2.7.92 ====================

2004-08-30  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.7.92

2004-08-25  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-i18n.c: Fix a warning caused by a missin
	declaration of bonobo_activation_i18n_get_language_list().
	* libgnome/gnome-program.c: (gnome_program_init_paramv):
	s/NULL/0 in parameter list. Closes bug #150986.

=================== 2.7.91 ====================
	
2004-08-16  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.7.91
